# CppPlayground

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  devenv.nix  vcpkg.json
include/cpp_playground/: arc_pointer.hpp  char_string.hpp  compile_time_gcd.hpp  concepts.hpp  deleter.hpp  owning_pointer.hpp
src/: CMakeLists.txt  allocation_sizes.cpp  thread_racer.cpp
tests/: CMakeLists.txt  test_arc_pointer.cpp  test_char_string.cpp  test_compile_time_gcd.cpp  test_owning_pointer.cpp
